# Deeptracer

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  package-lock.json  package.json  project(1).md  project.md  pyproject.toml  setup.py  type.py
.github/workflows/: PyTest.yml
Deeptracer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentCoze/: __init__.py  agent.py
backend/: __main__.py
deeptracer/: __init__.py
deeptracer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deeptracer/agentCoze/: .env.local  __init__.py  agent.py
deeptracer/anaMemory/: __init__.py  memoryAnalyzer.py
deeptracer/astAnalyer/: __init__.py  astVisualizer.py
deeptracer/backend/: __main__.py
deeptracer/tools_report/: VizPzInstrument.html  agentReply.json  ast_visualization.html  codeStructure.html  mem_report.html
deeptracer/viztracerAnalyer/: ViztracerAnalyer.py  __init__.py
deeptracer/workflow/: .env.local  __init__.py  flow.py
docs/: Deeptracer技术路线参考.md  Deeptracer概念文档.md  Diff库选型评估报告.md  Viztracer数据清洗规范文档.md  可视化模块组件架构设计图.md  本地测试开发指南.md
frontend/: compare.html  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
promopt/agent/: promopt.md
promopt/finally_change/: system_promopt.md  user_system.md
promopt/gather/: system_promopt.md  (+1 more)
src/: App.css  App.tsx
test/: test_agentCoze_contection_setMessage.py
test_local/: __init__.txt  agentCoze
vision1_lv/: index.html  jest.config.js  package-lock.json  package.json  test_local.txt
viz/: visualize.html
week/: week1.md  week2.md
(+60 files in other folders)
